# label-generator

./: CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.oma/state/: config.json
.qoder/repowiki/zh/content/: 快速开始.md  故障排除与常见问题.md  数据格式与规范.md  部署与运维.md  项目概述.md
.qoder/repowiki/zh/content/核心功能模块/: 数据处理模块.md  条码生成器.md  核心功能模块.md  渲染引擎.md  配置管理系统.md
.qoder/repowiki/zh/content/用户界面使用指南/: CLI命令行界面.md  GUI图形界面.md  用户界面使用指南.md
.qoder/repowiki/zh/content/配置与定制/: 字体配置.md  布局配置详解.md  模板图片定制.md  配置与定制.md
.qoder/repowiki/zh/content/高级功能与扩展/: 性能优化.md  扩展开发.md  自动化集成.md  错误处理与调试.md  高级功能与扩展.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
config/: layout.json
data/: products.csv
src/label_generator/: __init__.py  barcode_gen.py  cli.py  config.py  data_loader.py  gui.py  renderer.py
